# NUBLE-CLI

./: .dockerignore  .gitignore  AArchitecture   ARCHITECTURE_REVIEW.md  AUDIT_FIX_REPORT.md  CHANGELOG_v7.md  COMPLETE_SYSTEM_AUDIT.md  COMPREHENSIVE_AUDIT_REPORT.md  Dockerfile  EVOLUTION_COMPLETE.md  FINAL_AUDIT_REPORT.md  KYPERIAN_COMPLETE_DOCUMENTATION.md  KYPERIAN_ELITE_README.md  Kyperian_mltradining_system  MIGRATION_COMPLETED.md  MIGRATION_PLAN.md  Masterplan  NOVA_SONIC_INTEGRATION.md  NUBLE_COMPLETE_DOCUMENTATION.md  NUBLE_ELITE_README.md  NUBLE_MASTER_DOCUMENTATION.md  NUBLE_SYSTEM_ARCHITECTURE.md  Nuble_mltrading_system  PRODUCTION_CHECKLIST.md  README.md  SYSTEM_CAPABILITIES.md  TIER2_IMPLEMENTATION.md  UNIFIED_CLI_IMPLEMENTATION.md  V6_APEX_AUDIT_REPORT.md  Validation_instructions  chat_with_roket.py  deploy_webhooks.py  docker-compose.yml  filings_db  migrate_agents.py  migrate_to_nuble.py  patch_server.py  pyproject.toml  pyproject_institutional.toml  run_production.py  (+13 more)
TENK_SOURCE/: .gitignore
config/: production_config.py
data/: paper_trading_state.json  s3_deployment_manifest.json
data_cache/: AAPL_2024-01-01_2024-06-30_1d.json
docs/: AWS_ARCHITECTURE.md  FRONTEND_INTEGRATION.md  MTF_SYSTEM_README.md  PHASE8_TEST_REPORT.md  SIGNAL_FUSION_README.md  SIGNAL_GENERATOR_FIXES.md
models/: mlp_AMD_20260130.pt  mlp_SLV_20260130.pt  mlp_SPY_20260130.pt  mlp_TSLA_20260130.pt  mlp_XLK_20260130.pt
nova-sonic-frontend/: .dockerignore  .env.example  .gitignore  DEPLOYMENT-BEYONDGRID.md  DEPLOYMENT.md  Dockerfile  Dockerfile.roketfi  README.md  buildspec.yml  cloudformation-stack.yaml  deploy-appsync.sh  deploy-beyondgrid.sh  deploy-cloudlobo-full.sh  deploy-cloudlobo.sh  deploy-production.sh  deploy-roket.sh  deploy-roketfi.sh  deploy.sh  docker-compose.yml  package.json
scripts/: backfill_universe.py  deploy_all_to_aws.py  deploy_data_to_s3.sh  run_backtest.py  train_cross_sectional.py  train_universal.py
tests/: adversarial_output.txt  analyze_out.txt  check_participation.py  debug_complex_query.py  debug_integration_failure.py  deep_diagnosis.txt  detailed_trace.txt  diagnose_deep.py  diagnose_signals.py  diagnosis_output.txt  final_integration_output.txt  participation.txt  phase8_financial_v2.txt  real_baseline_output.txt  real_baseline_v2.txt  real_baseline_v3.txt  real_baseline_v4.txt  real_baseline_v5.txt  real_baseline_v6.txt  stability_output.txt  test_adversarial.py  test_agents_comprehensive.py  test_battle.py  test_chaos.py  test_e2e_trading.py  test_final_integration.py  test_financial_accuracy.py  test_integration_final.py  test_integration_unified.py  test_luxalgo_integration.py  test_ml_components.py  test_mtf_system.py  test_quick_imports.py  test_real_scenarios_extended.py  test_real_vs_baseline.py  test_stability.py  test_stress.py  test_tier2_council.py  test_vs_baseline.py  trace_output.txt
training_results/: result_AMD_mlp_20260130_164236.json  result_SLV_mlp_20260130_164147.json  result_SPY_mlp_20260130_130912.json  result_TSLA_mlp_20260130_164223.json  result_XLK_mlp_20260130_164230.json
validation/: PROGRESS_REPORT.md  PROGRESS_REPORT_v2.md  README.md  __init__.py  alpha_attribution.py  config.py  cpcv.py  data_downloader.py  final_oos_test.py  full_universe_test.py  improved_pipeline_validation.py  institutional_audit_results.json  lookahead_audit.py  orchestrator.py  phase12_pipeline.py  quick_audit_test.py  reduce_pbo_test.py  regime_adaptive_validation.py  robust_ensemble_test.py  run_institutional_audit.py  run_validation.py  sample_weighted_validation2.py  simple_weighted_test.py  test_coindesk_api.py  test_crypto_direct.py  test_crypto_module.py  test_crypto_quick.py  test_news_integration.py  walk_forward.py  (+1 more)
(+568 files in other folders)
