[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nuble"
version = "1.0.0"
description = "NUBLE - Institutional-Grade AI Investment Research Platform"
authors = [{name = "NUBLE"}]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich",
    "inquirer", 
    "tiktoken",
    "requests",
    "openai",
    "anthropic",
    "python-dotenv",
    "numpy>=1.24",
    "pandas>=2.0",
    "aiohttp",
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
ml = [
    "lightgbm>=4.0",
    "shap>=0.42",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "joblib>=1.3",
    "statsmodels>=0.14",
    "pyarrow>=14.0",
    "torch>=2.0",
]
data = [
    "fredapi>=0.5",
    "boto3>=1.28",
]
production = [
    "nuble[ml,data]",
    "gunicorn>=21.0",
    "uvicorn[standard]>=0.24",
    "redis>=5.0",
    "boto3>=1.28",
    "aiobotocore>=2.7",
    "httpx>=0.25",
    "aiohttp>=3.9",
    "hmmlearn>=0.3",
    "transformers>=4.35",
    "sentencepiece>=0.1.99",
    "polygon-api-client>=1.12",
    "fredapi>=0.5",
    "pyarrow>=14.0",
]
all = [
    "nuble[ml,data,production]",
]

[project.scripts]
nuble = "nuble.cli:main"
nuble-api = "nuble.api.server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"